<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/profileImage"
                android:src="@mipmap/ic_launcher"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="250dp"
                android:elevation="4dp"/>

        <TextView
                android:layout_gravity="center"
                android:id="@+id/textName"
                android:textSize="25sp"
                android:text="@string/text_name"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RelativeLayout
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_marginStart="8dp"
                    android:id="@+id/section_track"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/txtTrack"
                        android:layout_margin="8dp"
                        android:text="@string/track_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/txtTrack1"
                        android:layout_margin="8dp"
                        android:text="@string/android_track"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_marginStart="8dp"
                    android:id="@+id/section_country"
                    android:layout_below="@+id/section_track"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/txtCountry"
                        android:layout_margin="8dp"
                        android:text="@string/country_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/txtCountry1"
                        android:layout_margin="8dp"
                        android:text="@string/txtCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_marginStart="8dp"
                    android:id="@+id/section_email"
                    android:layout_below="@+id/section_country"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/txtEmail"
                        android:layout_margin="8dp"
                        android:text="@string/e_mail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/txtEmail1"
                        android:layout_margin="8dp"
                        android:text="@string/txt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_marginStart="8dp"
                    android:id="@+id/section_phone"
                    android:layout_below="@+id/section_email"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/txtPhone"
                        android:layout_margin="8dp"
                        android:text="@string/phone_number_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/txtPhone1"
                        android:layout_margin="8dp"
                        android:text="@string/txt_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_marginStart="8dp"
                    android:id="@+id/section_slack"
                    android:layout_below="@+id/section_phone"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/txtSlack"
                        android:layout_margin="8dp"
                        android:text="@string/slack_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/txtSlack1"
                        android:layout_margin="8dp"
                        android:text="@string/txt_slackName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>