<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:textSize="25sp"
            android:layout_margin="25dp"
            android:text="@string/welcome_to_alc_4_0"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/btnAbout"
            android:text="@string/about"
            android:layout_width="170dp"
            android:layout_height="wrap_content"/>

    <Button
            android:backgroundTint="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/btnProfile"
            android:text="@string/profile"
            android:layout_width="170dp"
            android:layout_height="wrap_content"/>


</LinearLayout>